src/styles/kit/_typography.scss
@import './nunitosans';
@import './iransans';
@import './OCR-A';

.title,
h1 {
  font-size: 26px;
  line-height: 26px;
  font-weight: bolder;
}

.headline,
h2 {
  font-size: 26px;
  line-height: 26px;
  font-weight: normal;
}

.subhead,
h3 {
  font-size: 16px;
  line-height: 16px;
  font-weight: normal;
}

.body,
p {
  font-size: 14px;
  line-height: 14px;
  font-weight: normal;
}

.callout {
  font-size: 16px;
  line-height: 16px;
  font-weight: normal;
}

.callout-small {
  font-size: 14px;
  line-height: 14px;
  font-weight: bold;
}

.footnote {
  font-size: 12px;
  line-height: 12px;
  font-weight: normal;
}

.caption {
  font-size: 14px;
  line-height: 14px;
  font-weight: bold;
}

.caption-small {
  font-size: 12px;
  line-height: 12px;
  font-weight: lighter;
}

.en {
  font-family: 'Nunito Sans';

  $custom-typography: mat-typography-config(
    $font-family: 'Nunito Sans',
  );

  @include mat-core($custom-typography);
}

.ru {
  font-family: Roboto;

  $custom-typography: mat-typography-config(
    $font-family: Roboto,
  );

  @include mat-core($custom-typography);
}

.zh {
  font-family: Roboto;

  $custom-typography: mat-typography-config(
    $font-family: Roboto,
  );

  @include mat-core($custom-typography);
}

.fa {
  font-family: IRANSans;

  $custom-typography: mat-typography-config(
    $font-family: IRANSans,
  );

  @include mat-core($custom-typography);
}

